feat: complete documentation
