# src/routes/categories.routes.ts
@@ -1,9 +1,9 @@
 import { Router } from 'express'
 import multer from 'multer'
 
-import { createCategoryController } from '../modules/cars/useCases/createCategory'
-import { importCategoryController } from '../modules/cars/useCases/importCategory'
-import { listCategoriesController } from '../modules/cars/useCases/listCategories'
+import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController'
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController'
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController'
 
 const categoriesRoutes = Router()
 
@@ -11,16 +11,18 @@ const upload = multer({
   dest: './tmp',
 })
 
-categoriesRoutes.post('/', (request, response) => {
-  return createCategoryController.hadle(request, response)
-})
+const createCategoryController = new CreateCategoryController()
+const importCategoryController = new ImportCategoryController()
+const listCategoriesController = new ListCategoriesController()
 
-categoriesRoutes.get('/', (request, response) => {
-  return listCategoriesController.hande(request, response)
-})
+categoriesRoutes.post('/', createCategoryController.hadle)
 
-categoriesRoutes.post('/import', upload.single('file'), (request, response) => {
-  return importCategoryController.handle(request, response)
-})
+categoriesRoutes.get('/', listCategoriesController.hande)
+
+categoriesRoutes.post(
+  '/import',
+  upload.single('file'),
+  importCategoryController.handle
+)
 
 export { categoriesRoutes }
